# MacHunt

./: .gitignore  Cargo.toml  README.md  README_zh.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
public/fonts/: fonts.css
src/: App.css  App.tsx  builder.rs  db.rs  engine.rs  filters.rs  lib.rs  main.rs  model.rs  search.rs  utils.rs  watcher.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: quicklook_bridge.m
src-tauri/src/: lib.rs  main.rs
