[package]
name = "mac_find"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
crossbeam = "0.8"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dashmap = "6"
fuzzy-matcher = "0.3"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
fsevent = "2.3.0"
