[package]
name = "machunt"
version = "0.2.1"
edition = "2021"

[dependencies]
walkdir = "2"
crossbeam = "0.8"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
core-foundation-sys = "0.8"
