[package]
name = "machunt-gui"
version = "0.2.1"
edition = "2021"
description = "Tauri GUI for MacHunt"

[lib]
name = "machunt_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
machunt = { path = ".." }
