[package]
name = "machunt-gui"
version = "0.2.5"
edition = "2021"
description = "Tauri GUI for MacHunt"

[lib]
name = "machunt_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
machunt = { path = ".." }
objc2-service-management = "0.3.2"
